--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "simplebar-react": "^2.3.6",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.5.5",
